[tool.poetry]
name = "gnssraw"
version = "0.1.0"
description = ""
authors = ["torupa <xpt77@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
georinex = "^1.16.1"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
